Fixing CSS for mobile

--- a/src/style/FloorGrid.css
+++ b/src/style/FloorGrid.css
@@ -1,6 +1,6 @@
 .FloorGrid {
   display: grid;
-  grid-template-columns: repeat(4, 100px);
+  grid-template-columns: repeat(4, 10vw);
   justify-content: center;
   border: solid;
 }
@@ -10,8 +10,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px;
-  width: 100px;
+  height: 10vw;
+  width: 10vw;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
