--- a/src/style/Map.css
+++ b/src/style/Map.css
@@ -5,28 +5,32 @@
   grid-template-columns: repeat(2, 50%)
 }
 
+@media(max-width: 700px){
+  .Map{
+    height: 100vh;
+    overflow: auto;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 48vh;
+  }
+}
+
 .Floor {
   display: flex;
   justify-content: center;
   align-content: center;
+  height: 40vw;
   padding: 20px;
 }
 
-.gridItemA {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  height: 400px;
-}
+/*.gridItemA {
+  height: 40vw
+}*/
 
 .gridItemB {
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 2;
+  margin: 20px;
   overflow: auto;
-  height: 400px;
+  background-color: rgba(255, 255, 255, 0.5)
 }
 
 .gridItemC {
